# gtfs-rt-validator

./: Cargo.toml  README.md
src/: err.rs  gtfs-realtime.proto  lib.rs  main.rs  report.rs
